add modified one

--- a/project.ipynb
+++ b/project.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"helloo git hub\")"
+    "print(\"helloo git hub\")\n",
+    "print(\"Another Hellow Github\")"
    ]
   }
  ],
